data/derived/comb/progs/unify/prog5072.ml.out
Characters 86-106:
  bigAdd total  (mulByDigit (i-1) l);;
                ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
